docs: 문자열 중복 제거 통계 모니터링 방법 업데이트
- PrintStringDeduplicationStatistics 제거에 따른 문서 업데이트
- Java 9+ 통합 로깅 프레임워크 사용 방법 반영